--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-bearer-token": "^2.4.0",
+    "express-handlebars": "^7.0.2",
     "firebase": "^9.17.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.1",
+    "nodemailer-express-handlebars": "^6.0.0",
     "nodemon": "^2.0.21"
   }
 }
